--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge">
-    <title>LB02 - Promillerechner</title>
-    <link rel="shortcut icon" href="assets/favicon.png">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;600;700;800&display=swap"
-        rel="stylesheet">
-</head>
-
-<body>
-
-    <header>
-        <video autoplay muted loop id="Video">
-            <source src="assets/mixtable.mp4" type="video/mp4">
-        </video>
-        <div class="logo">
-            <h1>LB02</h1>
-            <h3>by Nils & Samuel</h3>
-        </div>
-    </header>
-    <main>
-        <h1>Promillerechner!</h1>
-        <p>Hier kommt der Rechner rein, gell</p>
-    </main>
-    <footer>
-        <div>
-        <h1>ACHTUNG!</h1>
-        <p>Alkohol kann bereits in kleinen Mengen eine Vielzahl von Krankheiten verursachen
-            <br>
-            oder begünstigen. Wer zu viel und zu häufig trinkt, läuft Gefahr, abhängig zu werden
-            <br>
-            oder eine Vergiftung zu erleiden. Auch das Unfallrisiko steigt...</p>
-        </div>
-    </footer>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie-edge">
+        <title>Calculator</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
+    </head>
+    <body>
+        <div class="calculator-grid">
+            <div class="output">
+                <div class="previous-operhead"></div>
+                <div class="current-operand"></div>
+            </div>
+            <button class="span-two">AC</button>
+            <button>DEL</button>
+            <button>÷</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>-</button>
+            <button>.</button>
+            <button>0</button>
+            <button class="span-two">=</button>
+        </div> 
+    </body>
 </html>
